Xóa các file không còn tồn tại ở máy

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,6 +44,22 @@
 				"$msCompile"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Publish Single Release",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"publish",
+				"-c",
+				"Release",
+				"-r",
+				"win-x64",
+				"--self-contained",
+				"true",
+				"/p:PublishSingleFile=true"
+			],
+			"group": "build"
 		}
 	]
 }
